refacted: Added favicon, modified content

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Rezume Free Template by Colorlib</title>
+    <title>Jassy Mon</title>
     <meta charset="utf-8" />
     <meta
       name="viewport"
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="css/animate.css" />
     <link rel="stylesheet" href="css/flexslider.css" />
     <link rel="stylesheet" href="fonts/icomoon/style.css" />
-
+    <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="css/bootstrap.css" />
     <link rel="stylesheet" href="css/style.css" />
 
@@ -93,15 +93,15 @@
         <div class="filters">
           <ul>
             <li class="active" data-filter="*">All</li>
-            <li data-filter=".packaging">Web</li>
+            <li data-filter=".web">Web</li>
             <li data-filter=".mockup">Design</li>
-            <li data-filter=".typography">Backend</li>
+            <li data-filter=".backend">Backend</li>
           </ul>
         </div>
 
         <div class="filters-content">
           <div class="row grid">
-            <div class="single-portfolio col-sm-4 all mockup">
+            <div class="single-portfolio col-sm-4 all web">
               <div class="relative">
                 <div class="thumb">
                   <div class="overlay overlay-bg"></div>
@@ -139,13 +139,13 @@
                 <div class="cat">Mockup</div>
               </div>
             </div>
-            <div class="single-portfolio col-sm-4 all packaging">
+            <div class="single-portfolio col-sm-4 all backend">
               <div class="relative">
                 <div class="thumb">
                   <div class="overlay overlay-bg"></div>
-                  <img class="image img-fluid" src="images/p3.jpg" alt="" />
+                  <img class="image img-fluid" src="images/projects.jpeg" alt="" />
                 </div>
-                <a href="images/p3.jpg" class="img-pop-up">
+                <a href="images/projects.jpeg" class="img-pop-up">
                   <div class="middle">
                     <div class="text align-self-center d-flex">
                       <img src="images/preview.png" alt="" />
@@ -154,8 +154,8 @@
                 </a>
               </div>
               <div class="p-inner">
-                <h4>Creative Package Design</h4>
-                <div class="cat">Packaging</div>
+                <h4>Farm Auto Backend</h4>
+                <div class="cat">Backend</div>
               </div>
             </div>
           </div>
@@ -505,16 +505,9 @@
             <ul class="site-contact-details">
               <li>
                 <span class="text-uppercase">Email</span>
-                site@gmail.com
+                jassymon114@gmail.com
               </li>
-              <li>
-                <span class="text-uppercase">Phone</span>
-                +30 976 1382 9921
-              </li>
-              <li>
-                <span class="text-uppercase">Fax</span>
-                +30 976 1382 9922
-              </li>
+              
               <li>
                 <span class="text-uppercase">Address</span>
                 San Francisco, CA <br />
@@ -532,15 +525,11 @@
         <div class="row mb-5">
           <p class="col-12 text-center">
             <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-            Copyright &copy;
+            | Copyright &copy;
             <script>
               document.write(new Date().getFullYear());
             </script>
-            All rights reserved | This template is made with
-            <i class="icon-heart text-danger" aria-hidden="true"></i> by
-            <a href="https://colorlib.com" target="_blank" class="text-primary"
-              >Colorlib</a
-            >
+            All rights reserved | 
             <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
           </p>
         </div>
@@ -548,21 +537,19 @@
         <div class="row mb-5">
           <div class="col-md-12 text-center">
             <p>
-              <a href="#" class="social-item"
+              <a href="http://www.facebook.com/" class="social-item"
                 ><span class="icon-facebook2"></span
               ></a>
-              <a href="#" class="social-item"
+              <a href="http://www.x.com" class="social-item"
                 ><span class="icon-twitter"></span
               ></a>
-              <a href="#" class="social-item"
+              <a href="http://www.instagram.com" class="social-item"
                 ><span class="icon-instagram2"></span
               ></a>
-              <a href="#" class="social-item"
+              <a href="https://www.linkedin.com/in/jassy-mon-365492271/" class="social-item"
                 ><span class="icon-linkedin2"></span
               ></a>
-              <a href="#" class="social-item"
-                ><span class="icon-vimeo"></span
-              ></a>
+         
             </p>
           </div>
         </div>
